--- a/Wallnut.Domain/CodeTemplates/ReverseEngineerCodeFirst/Context.tt
+++ b/Wallnut.Domain/CodeTemplates/ReverseEngineerCodeFirst/Context.tt
@@ -8,6 +8,7 @@
 using System.Data.Entity;
 using System.Data.Entity.Infrastructure;
 using <#= code.EscapeNamespace(efHost.MappingNamespace) #>;
+using Wallnut.Domain.Interfaces;
 
 namespace <#= code.EscapeNamespace(efHost.Namespace) #>
 {
